--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,8 +20,8 @@
     <div class="navbar">
         <ul>
             <li><a href="../home.html">Home</a></li>
-            <li><a href="/portfolio/portfolio.html">Portfolio</a></li>
-            <li><a href="/contact/contact.html">Contact</a></li>
+            <li><a href="/portfolio/index.html">Portfolio</a></li>
+            <li><a href="/contact/index.html">Contact</a></li>
         </ul>
     </div>
 
