--- a/contact/contact.html
+++ b/contact/contact.html
@@ -19,7 +19,7 @@
 
     <div class="navbar">
         <ul>
-            <li><a href="../home.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="/portfolio/portfolio.html">Portfolio</a></li>
             <li><a href="/contact/contact.html">Contact</a></li>
         </ul>
