--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -19,9 +19,9 @@
 
     <div class="navbar">
         <ul>
-            <li><a href="../home.html">Home</a></li>
-            <li><a href="/portfolio/index.html">Portfolio</a></li>
-            <li><a href="/contact/index.html">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="/DCstudios/portfolio/portfolio.html">Portfolio</a></li>
+            <li><a href="/DCstudios/contact/contact.html">Contact</a></li>
         </ul>
     </div>
 
