--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="navbar">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="/portfolio/portfolio.html">Portfolio</a></li>
+      <li><a href="/DCstudios/portfolio/portfolio.html">Portfolio</a></li>
       <li><a href="/contact/contact.html">Contact</a></li>
     </ul>
   </div>
