--- a/contact/contact.html
+++ b/contact/contact.html
@@ -20,8 +20,8 @@
     <div class="navbar">
         <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="/portfolio/portfolio.html">Portfolio</a></li>
-            <li><a href="/contact/contact.html">Contact</a></li>
+            <li><a href="/DCstudios/portfolio/portfolio.html">Portfolio</a></li>
+            <li><a href="/DCstudios/contact/contact.html">Contact</a></li>
         </ul>
     </div>
 
