--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="/DCstudios/portfolio/portfolio.html">Portfolio</a></li>
-      <li><a href="/contact/contact.html">Contact</a></li>
+      <li><a href="/DCstudios/contact/contact.html">Contact</a></li>
     </ul>
   </div>
 
